adjusts final alignment issues

--- a/client/src/components/CocktailData/style.css
+++ b/client/src/components/CocktailData/style.css
@@ -43,6 +43,10 @@
     margin-left: 10%;
   }
 
+  #drinkList {
+    margin-left: 10%;
+  }
+
   #popup {
-    margin-left: 20%;
+    margin-left: 22%;
   }
